# pius_project

./: .editorconfig  .gitignore  README.md
services/: README.md
services/analytics-service/: README.md  alembic.ini  pyproject.toml  requirements.txt
services/analytics-service/alembic/: env.py
services/analytics-service/alembic/versions/: 20260421_01_create_analytics_tables.py
services/analytics-service/app/: config.py  db.py  dependencies.py  main.py  schemas.py
services/analytics-service/app/clients/: survey_client.py
services/analytics-service/app/routers/: analytics.py  internal.py  users.py
services/analytics-service/tests/: test_analytics.py
services/survey-service/: README.md  alembic.ini  requirements.txt
services/survey-service/alembic/: env.py
services/survey-service/app/: db.py  main.py  models.py  schemas.py
services/survey-service/tests/: conftest.py  test_surveys.py
services/user-service/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
services/user-service/alembic/: env.py
services/user-service/alembic/versions/: 0001_create_users_table.py  0002_add_xp_and_level_to_users.py  0003_create_event_deduplication_tables.py  0004_fix_unique_constraint_events.py
services/user-service/src/app/: application.py  config.py  database.py  main.py  migrations.py  security.py
services/user-service/src/app/users/: models.py  repository.py  router.py  schemas.py  service.py
services/user-service/tests/: test_users.py
src/app/: main.py
src/app/users/: router.py
tests/: __init__.py  test_users.py
(+8 files in other folders)
